@@ -1,12 +1,13 @@
 package com.palangwi.soup.security;
 
 import com.palangwi.soup.security.userinfo.OAuth2UserInfo;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
 
 @RequiredArgsConstructor
@@ -21,7 +22,7 @@ public class CustomOAuth2User implements OAuth2User {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(userInfo.getRole().value()));
     }
 
     @Override
